--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\LATITUDE 5490\OneDrive - Northfield Methodist Church\Documents\Claire\Web Development\HTML - Personal Site\Image\claire pic.png">
+        <td><img src="https://github.com/ClaireThomson/CV/blob/main/Image/Claire%20Pic.png">
         <td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
