--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://github.com/ClaireThomson/CV/blob/main/Image/Claire%20Pic.png">
+        <td><img src="Image/Claire%20Pic.png">
         <td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
