--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Claire Personal Site</title>
   </head>
 
-  <body>
+  <body> 
     <table cellspacing="20">
       <tr>
-        <td><"Claire Pic.png">
+        <td><"clairepic.png">
         <td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
