--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body> 
     <table cellspacing="20">
       <tr>
-        <td><"Claire Pic.png">
+        <td><"Image/Claire Pic.png">
         <td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
