--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body> 
     <table cellspacing="20">
       <tr>
-        <td><claire pic.png>
+        <td><img src="Image/claire pic.png">
           </td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
