--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body> 
     <table cellspacing="20">
       <tr>
-        <td>claire pic.png
-          </td>
+        <td>claire pic.png</td>
           <h1>Claire Thomson</h1>
           <p><em><strong><a
                   href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiv87Kky9X6AhXM7e0KHVQ1AiwYABABGgJkZw&ohost=www.google.com&cid=CAESbeD2iwtcQM3_aWXP8bKfxIaWbTFECNDM4Yoco3OM43TOqNvRcdy-lgq14HuGjgOKFQ9NBugy2LcNsQX3qS0kdE6xGVru8r0rDC1X1q_XK_tvA5nninlSUo2lxABPgyAiH19aruldnD7Lc7ePArw&sig=AOD64_1cWvfIMpcBPQm9EGOuu2bLCgMbgQ&q&adurl&ved=2ahUKEwifhqeky9X6AhVMQMAKHUGXCwUQ0Qx6BAgIEAE">Wife</a></strong>
