--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <center>Northfield Methodist Church Office Assistant
           </td>
           <td>
-            <center>1 July 2015 – Present
+            <center>1 July 2015 – 30 December 2022
           </td>
 </center>
 </tr>
